# Epicalyx

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
cmake/: FindGraphviz.cmake
epicalyx/ast/: CMakeLists.txt  Declaration.cpp  Declaration.h  Expression.cpp  Expression.h  Initializer.cpp  Initializer.h  Node.cpp  Node.h  NodeFwd.h  NodeVisitor.h  Statement.cpp  Statement.h
epicalyx/calyx/: CMakeLists.txt  Calyx.cpp  Calyx.h  CalyxFwd.h  Directive.cpp  Directive.h  Types.h  Utils.cpp  Utils.h
epicalyx/calyx/backend/: Backend.h  CMakeLists.txt  Example.cpp  Example.h  Methods.inl  Templates.inl
epicalyx/calyx/backend/interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h
epicalyx/config/: Info.cpp  Info.h  Log.cpp  PCH.h
epicalyx/config/argparse/: LICENSE  argparse.hpp
epicalyx/cycle/: CMakeLists.txt  Cycle.cpp  Cycle.h  Graph.h
epicalyx/cycle/frontend/: CMakeLists.txt
epicalyx/cycle/frontend/imgui/: imgui.h  imgui_widgets.cpp
epicalyx/cycle/frontend/imnodes/: ImNodes.cpp  ImNodesEz.cpp
epicalyx/file/: CMakeLists.txt  File.cpp  File.h  SString.cpp  SString.h
epicalyx/include/: Algorithm.h  Aligned.h  Assert.h  CString.h  Cast.h  Containers.h  CustomAssert.h  Decltype.h  Default.h  Escape.h  Exceptions.h  Format.h  Hash.h  Is.h  Locatable.h  Log.h  Packs.h  SStream.h  Scope.h  Stream.h  StreamStack.h  Stringify.h  TypeName.h  TypeTraits.h  Variant.h  Vector.h
epicalyx/include/swl/: variant.hpp
epicalyx/ir_emitter/: ASTWalker.Declaration.cpp  ASTWalker.Expression.cpp  ASTWalker.Statement.cpp  ASTWalker.cpp  ASTWalker.h  CMakeLists.txt  Emitter.cpp  Emitter.h  Helpers.Expression.inl  Helpers.cpp  Helpers.h  Helpers.inl
epicalyx/optimizer/: BasicOptimizer.cpp  BasicOptimizer.h  CMakeLists.txt  CommonExpressions.cpp  CommonExpressions.h  IRCompare.h  ProgramDependencies.cpp  ProgramDependencies.h  RemoveUnused.cpp  RemoveUnused.h
epicalyx/parser/: CMakeLists.txt  ConstParser.cpp  ConstParser.h  ConstTokenVisitor.cpp  ConstTokenVisitor.h  ExpressionParser.cpp  ExpressionParser.h  Parser.Declarations.cpp  Parser.Expressions.cpp  Parser.Statements.cpp  Parser.cpp  Parser.h
epicalyx/parser/nodes/: CMakeLists.txt  Declaration.cpp  Declaration.h  Declarations.h  Expression.cpp  Expression.h  Initializer.cpp  Initializer.h  Node.cpp  Node.h  Statement.cpp  Statement.h
epicalyx/phyte/: ASTWalker.cpp  ASTWalker.h  CMakeLists.txt  Emitter.cpp  Emitter.h  Helpers.inl
epicalyx/regalloc/: Allocator.h  CMakeLists.txt  GeneralizedVar.h  RIG.cpp  RIG.h  RegisterSpace.cpp  RegisterSpace.h
epicalyx/regalloc/regspaces/: Example.cpp  Example.h
epicalyx/stl/: stdint.h  stdio.h
epicalyx/taxy/: CMakeLists.txt  Declaration.cpp  Declaration.h  Expression.cpp  Expression.h  Initializer.cpp  Initializer.h  Node.cpp  Node.h  NodeVisitor.h  Statement.cpp  Statement.h
epicalyx/tokenizer/: CMakeLists.txt  Identifier.h  Maps.cpp  Preprocessor.Directives.cpp  Preprocessor.Macros.cpp  Preprocessor.Stddef.cpp  Preprocessor.cpp  Preprocessor.h  Token.cpp  Token.h  TokenType.h  Tokenizer.cpp  Tokenizer.h
epicalyx/types/: AnyType.cpp  AnyType.h  BaseType.cpp  BaseType.h  CMakeLists.txt  EpiCType.h  TypeFwd.h  TypeUtils.h  Types.cpp  Types.h  ValueTypeMethods.inl
examples/: numerical_constants.c  strings.c
examples/emitting/: arrays.c  binop.c  branches.c  first.c  fpr_gpr_interference.c  functions.c  globals.c  logical_operators.c  loops.c  optimizing.c  pointers.c  preprocessing.c  small_types.c  switch.c  ternary.c
examples/parsing/assignment/: combined1.expr
examples/parsing/binary/: combined.expr
examples/parsing/declarations/: abstract_declarator.decl  declaration.decl  declarator.decl  enum.decl  initializer_list.decl  static_assert.decl  struct.decl
examples/parsing/expressions/assignment/: combined2.expr
examples/parsing/expressions/binary/: binary1.expr  binary2.expr
examples/parsing/expressions/cast/: cast.expr
examples/parsing/postfix/: array_access.expr  combined.expr  member_access.expr
examples/parsing/primary/: constant.expr
examples/parsing/program/: hello_world.c  test.c  typedefs.c
examples/parsing/statements/: combined.stat
examples/parsing/unary/: combined.expr  increment.expr  sizeof.expr
examples/tokenization/: hello_world.c  numerical_constants.c  strings.c  struct_def.c
files/: custom_common_type.txt
old/: CMakeLists.txt  main.cpp
old/src/file/: file.h
old/src/include/: flags.h  log.h  utils.h
old/src/parser/: AST.h  CMakeLists.txt  ExpectBinOp.inl  parser_state.h  parser_utils.cpp
old/src/state/: state.h
old/src/tokenizer/: CMakeLists.txt  punctuators.h
profiling_tools/: README.md  profile_end.bat  profile_start.bat
src/include/: default.h  flags.h  log.h  utils.h
src/parser/: AST.h  CMakeLists.txt  ExpectBinOp.inl  ExpectDeclarator.inl  parser.cpp  parser.h  parser_declaration.cpp  parser_expression.cpp  parser_expressions.cpp  parser_state.h  parser_statement.cpp  parser_translation_unit.cpp  parser_utils.cpp  statement_nodes.h
src/parser/analysis/: CMakeLists.txt  visitor.h
src/parser/declaration/: declaration.h  declaration_specifier.h  declarator.h  designation.h  enum.h  initializer.h  parser_declaration.cpp  pointer.h  specifiers.h  static_assert.h  struct.h  tables.cpp  typename.h
src/parser/expression/: assign_expression.h  binop_expression.h  cast_expression.h  cond_expression.h  expression.h  expression_nodes.cpp  parser_expression.cpp  postfix_expression.h  primary_expression.h  tables.cpp  unary_expression.h
src/parser/statement/: compound.h  empty.h  iteration.h  jump.h  labeled.h  parser_statement.cpp  selection.h
src/parser/translation_unit/: function_definition.h
src/parser/types/: type_propagation.h  type_utils.h  types.cpp  types.h  value_type_methods.inl
src/state/: state.h
src/tokenizer/: CMakeLists.txt  keywords.h  numerical.cpp  punctuators.h  strings.cpp  token_types.h  tokenizer.cpp  tokenizer.h  tokens.cpp  tokens.h  types.h  variant_util.h
tests/: csmith.c  main.py  test.c
tests/suites/: .gitignore  README.md  run_suite.py
(+119 files in other folders)
